# DFT-demo

./: .gitignore  CMakeLists.txt  README.md  READMU.md  bitmap.py  complex.c  dft.c  dft_small.c  fft.c  fft_dft_speed.py  main.c  matrix.c  plot_complex.py  plot_dft_real.py  simple_rng.c  trand
include/: complex.h  config.h  dft.h  dft_small.h  fft.h  macros.h  matrix.h  simple_rng.h
src/: complex.c  dft.c  fft.c  main.c  matrix.c  simple_rng.c
tools/: plot_dft_real.py  rand.php  toolbox.py
